feat: implement database initialization script and update event handling in API

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "nodemon -L src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "db:init": "node scripts/run-init-sql.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
